--- a/Table_of_Contents.ipynb
+++ b/Table_of_Contents.ipynb
@@ -12,8 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HCL Informix \n",
-    "Drive better business decisions through deeper and accurate insights into all your data: at the edge, on premise, and in the cloud. HCL Informix delivers on all your data management needs, while being on an average 30% better than other enterprise database vendors, in total cost of ownership. Scaling to meet all your business demands, across globally distributed homogeneous and heterogeneous platforms, with zero downtime."
+    "# IBM Informix \n",
+    "Drive better business decisions through deeper and accurate insights into all your data: at the edge, on premise, and in the cloud. IBM Informix delivers on all your data management needs, while being on an average 30% better than other enterprise database vendors, in total cost of ownership. Scaling to meet all your business demands, across globally distributed homogeneous and heterogeneous platforms, with zero downtime."
    ]
   },
   {
@@ -39,7 +39,7 @@
     "    <td style=\"padding: 15px; text-align:left; vertical-align: text-top; background-color:#F7F7F7; width: 300px; height: 250px;\">\n",
     "        <div style=\"height: 75px\"><p style=\"font-size: 24px\">An Introduction Informix</div>\n",
     "        <div style=\"height: 120px\"><p style=\"font-size: 14px\">\n",
-    "             HCL Informix® is a fast and flexible database with the ability to seamlessly integrate SQL, NoSQL/JSON, \n",
+    "             Informix® is a fast and flexible database with the ability to seamlessly integrate SQL, NoSQL/JSON, \n",
     "             and time series and spatial data. Its versatility and ease of use make Informix a preferred solution for a wide \n",
     "             range of environments. \n",
     "        </div>\n",
